apps/internal/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: svc-qbittorrent
  labels: { app: qbittorrent }
spec:
  type: ClusterIP
  selector: { app: qbittorrent }
  ports:
    - name: http
      port: 80
      targetPort: http
